--- a/Ejercicio4/Ejercicio4.html
+++ b/Ejercicio4/Ejercicio4.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8"/>
+	<meta name="viewport" content="width=device-width, maximum-scale=0.5"/>
     <title>Ejercicio4</title>
 	<link rel="stylesheet" href="Ejercicio4.css"/>
 </head>
@@ -10,7 +11,7 @@
     
         <p> Si no pones ningún año se utilizará por defecto 2014 </p>
         <form action='#' method='post' name='calculadora'>
-                <input type='text' name='year' value=''/>
+                <input type='text' title='year' name='year' value=''/>
                 <input type='submit'  value='Pedir JSON con año'/>
         </form>
     
