--- a/Ejercicio6/Ejercicio6Insertar.html
+++ b/Ejercicio6/Ejercicio6Insertar.html
@@ -4,7 +4,7 @@
     
 	<meta name="viewport" content="width=device-width, maximum-scale=0.5">
     <title>Ejercicio 6</title>
-	<link rel="stylesheet" href="./Ejercicio6Insertar_files/Ejercicio6.css">
+	<link rel="stylesheet" href="Ejercicio6.css"/>
 </head>
 <body>
     <section>
